<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/calculator_table"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
        >

        <TableRow
            android:layout_weight="5"
            >
            <TextView
                android:id="@+id/input_screen"
                tools:text="{0 1 2 3 4 5 6 7 8 9 A B}"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/input_screen_text_size"
                android:padding="@dimen/input_screen_padding"
                android:gravity="center"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_marginStart="@dimen/labels_margin"
            android:layout_marginEnd="@dimen/labels_margin"
            android:layout_marginLeft="@dimen/labels_margin"
            android:layout_marginRight="@dimen/labels_margin"
            >
            <TextView
                android:text="@string/normal_form"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/labels_text_size"
                android:padding="@dimen/labels_padding"
                android:gravity="center|end"
                android:background="@color/background"
                />
            <TextView
                android:id="@+id/normalForm"
                tools:text="[0 1 2 3 4 5 6 7 8 9 A B]"
                android:text="@string/no_value"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/labels_value_text_size"
                android:padding="@dimen/labels_padding"
                android:gravity="center_vertical"
                />
            <TextView
                android:text="@string/prime_form"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/labels_text_size"
                android:padding="@dimen/labels_padding"
                android:gravity="center|end"
                />
            <TextView
                android:id="@+id/primeForm"
                tools:text="(0 1 2 3 4 5 6 7 8 9 A B)"
                android:text="@string/no_value"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/labels_value_text_size"
                android:padding="@dimen/labels_padding"
                android:gravity="center_vertical"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_marginStart="@dimen/labels_margin"
            android:layout_marginEnd="@dimen/labels_margin"
            android:layout_marginLeft="@dimen/labels_margin"
            android:layout_marginRight="@dimen/labels_margin"
            >
            <TextView
                android:text="@string/interval_vector"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/labels_text_size"
                android:padding="@dimen/labels_padding"
                android:gravity="center|end"
                />
            <TextView
                android:id="@+id/intervalVector"
                tools:text="&lt;12 12 12 12 12 6&gt;"
                android:text="@string/no_value"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/labels_value_text_size"
                android:padding="@dimen/labels_padding"
                android:gravity="center_vertical"
                />
            <TextView
                android:text="@string/forte_number"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/labels_text_size"
                android:padding="@dimen/labels_padding"
                android:gravity="center|end"
                />
            <TextView
                android:id="@+id/forteNumber"
                tools:text="4-Z29\n(Z-mate: 4-Z15)"
                android:text="@string/no_value"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/labels_value_text_size"
                android:padding="@dimen/labels_padding"
                android:gravity="center_vertical"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/button9"
                android:text="@string/_9"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
            <Button
                android:id="@+id/buttonA"
                android:text="@string/_A"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
            <Button
                android:id="@+id/buttonB"
                android:text="@string/_B"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
            <Button
                android:id="@+id/buttonUndo"
                android:text="@string/undo"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/button6"
                android:text="@string/_6"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
            <Button
                android:id="@+id/button7"
                android:text="@string/_7"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
            <Button
                android:id="@+id/button8"
                android:text="@string/_8"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
            <Button
                android:id="@+id/buttonClear"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/button3"
                android:text="@string/_3"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
            <Button
                android:id="@+id/button4"
                android:text="@string/_4"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
            <Button
                android:id="@+id/button5"
                android:text="@string/_5"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
            <Button
                android:id="@+id/buttonTn"
                android:text="@string/transposition"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/button0"
                android:text="@string/_0"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
            <Button
                android:id="@+id/button1"
                android:text="@string/_1"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
            <Button
                android:id="@+id/button2"
                android:text="@string/_2"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
            <Button
                android:id="@+id/buttonIn"
                android:text="@string/inversion"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/number_button_text_size"
                />
        </TableRow>

    </TableLayout>

</LinearLayout>