<?xml version="1.0" encoding="utf-8"?>

<!--xml just for testing how the about fragment renders
    on different screen widths-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/about_title_padding"
                android:text="@string/about_normal_form_title"
                android:textSize="@dimen/about_title_textsize"
                android:textStyle="bold"
                android:background="@color/background"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/about_desc_padding_left"
                android:paddingStart="@dimen/about_desc_padding_left"
                android:paddingEnd="@dimen/about_desc_padding_elsewhere"
                android:paddingRight="@dimen/about_desc_padding_elsewhere"
                android:paddingTop="@dimen/about_desc_padding_elsewhere"
                android:paddingBottom="@dimen/about_desc_padding_elsewhere"
                android:text="@string/about_normal_form_desc"
                android:textSize="@dimen/about_desc_textsize"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/about_title_padding"
                android:text="@string/about_prime_form_title"
                android:textSize="@dimen/about_title_textsize"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/about_desc_padding_left"
                android:paddingStart="@dimen/about_desc_padding_left"
                android:paddingEnd="@dimen/about_desc_padding_elsewhere"
                android:paddingRight="@dimen/about_desc_padding_elsewhere"
                android:paddingTop="@dimen/about_desc_padding_elsewhere"
                android:paddingBottom="@dimen/about_desc_padding_elsewhere"
                android:text="@string/about_prime_form_desc"
                android:textSize="@dimen/about_desc_textsize"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/about_title_padding"
                android:text="@string/about_interval_vector_title"
                android:textSize="@dimen/about_title_textsize"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/about_desc_padding_left"
                android:paddingStart="@dimen/about_desc_padding_left"
                android:paddingEnd="@dimen/about_desc_padding_elsewhere"
                android:paddingRight="@dimen/about_desc_padding_elsewhere"
                android:paddingTop="@dimen/about_desc_padding_elsewhere"
                android:paddingBottom="@dimen/about_desc_padding_elsewhere"
                android:text="@string/about_interval_vector_desc"
                android:textSize="@dimen/about_desc_textsize"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/about_title_padding"
                android:text="@string/about_forte_number_title"
                android:textSize="@dimen/about_title_textsize"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/about_desc_padding_left"
                android:paddingStart="@dimen/about_desc_padding_left"
                android:paddingEnd="@dimen/about_desc_padding_elsewhere"
                android:paddingRight="@dimen/about_desc_padding_elsewhere"
                android:paddingTop="@dimen/about_desc_padding_elsewhere"
                android:paddingBottom="@dimen/about_desc_padding_elsewhere"
                android:text="@string/about_forte_number_desc"
                android:textSize="@dimen/about_desc_textsize"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/about_title_padding"
                android:text="@string/about_symmetry_title"
                android:textSize="@dimen/about_title_textsize"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/about_desc_padding_left"
                android:paddingStart="@dimen/about_desc_padding_left"
                android:paddingEnd="@dimen/about_desc_padding_elsewhere"
                android:paddingRight="@dimen/about_desc_padding_elsewhere"
                android:paddingTop="@dimen/about_desc_padding_elsewhere"
                android:paddingBottom="@dimen/about_desc_padding_elsewhere"
                android:text="@string/about_symmetry_desc"
                android:textSize="@dimen/about_desc_textsize"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/about_title_padding"
                android:text="@string/about_credits_text"
                android:textSize="@dimen/about_credits_textsize"
                android:textStyle="italic"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>