<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/list_item_child_key_layout"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingStart="@dimen/list_item_child_layout_padding_left"
              android:paddingLeft="@dimen/list_item_child_layout_padding_left"
              android:paddingEnd="@dimen/list_item_child_layout_padding_everything_but_left"
              android:paddingRight="@dimen/list_item_child_layout_padding_everything_but_left"
              android:paddingTop="@dimen/list_item_child_layout_padding_everything_but_left"
              android:paddingBottom="@dimen/list_item_child_layout_padding_everything_but_left"
              android:background="@drawable/list_item_child_key_background"
              android:visibility="gone"
    >

    <TextView
        android:id="@+id/child_prime_form_key"
        android:text="@string/prime_form_key"
        android:textStyle="italic"
        android:textSize="@dimen/list_item_child_textsize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        />
    <TextView
        android:id="@+id/child_forte_number_key"
        android:text="@string/forte_number_key"
        android:textStyle="italic"
        android:textSize="@dimen/list_item_child_textsize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        />
    <TextView
        android:id="@+id/child_inteval_vector_key"
        android:text="@string/interval_vector_key"
        android:textStyle="italic"
        android:textSize="@dimen/list_item_child_textsize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/child_transpositional_symmetry_key"
        android:text="@string/tn_sym_key"
        android:textStyle="italic"
        android:textSize="@dimen/list_item_child_textsize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/child_inversional_symmetry_key"
        android:text="@string/in_sym_key"
        android:textStyle="italic"
        android:textSize="@dimen/list_item_child_textsize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        />

</LinearLayout>